--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "another-clsx",
   "version": "1.0.0",
   "description": "Experimenting on npm package",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
